welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
var nb=0;
var x=0;
var y=0;


def tag(){
  ecritMessage(nb)
  nb=nb+1
}

def eldiago(){
    for(j<-0 to getMondeHauteur()-1){
      setPos(0,j)
      y=j
      x=0
      diag=diag+1
      if(daig<=7){
        for(i<-1 to diag){
          setPos(x+i-1,diag-i)
          tag()
        }
      }
    }
}

override def run() {
    eldiago()
}
  